git config core.autocrlf input

--- a/index.html
+++ b/index.html
@@ -75,25 +75,16 @@
 <p align="center">Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordinary.</p>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/patches/22.html" title="Plum Water Soluble Paste,2024-06-02 18:43:35">
+      <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/image/20201016/1602835279805298.jpg" width=460 height=300 alt="Plum Water Soluble Paste" class="img-auto scale" /> </figure>
+              <img loading="lazy" src="/q/upload/image/20201015/1602733139966686.jpg" width=460 height=300 alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong>Plum Water Soluble Paste<sup class="badge">$:12</sup> Read More </strong>
+        <strong>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing<sup class="badge">$:12.99</sup> Read More </strong>
 		
       </a>
-      <a class="big-x3 flex flex-column" href="/q/patches/21.html" title="Tiger head embroidery sticker,2024-06-02 18:42:38">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/image/20201016/1602834188365455.jpg" width=460 height=300 alt="Tiger head embroidery sticker" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong>Tiger head embroidery sticker<sup class="badge">$:12</sup> Read More </strong>
-		
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/patches/20.html" title="Skull cloth patch,2024-06-02 18:41:28">
+      <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
               <img loading="lazy" src="/q/upload/image/20201015/1602746517551568.jpg" width=460 height=300 alt="Skull cloth patch" class="img-auto scale" /> </figure>
@@ -102,16 +93,7 @@
         <strong>Skull cloth patch<sup class="badge">$:12</sup> Read More </strong>
 		
       </a>
-      <a class="big-x3 flex flex-column" href="/q/sewing/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed S,2021-11-18 16:47:47">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/q/upload/image/20201015/1602733139966686.jpg" width=460 height=300 alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed S" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed S<sup class="badge">$:19.99</sup> Read More </strong>
-		
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/sewing/13.html" title="Embroidery flower bud lace flower applique,2018-04-12 10:24:52">
+      <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
               <img loading="lazy" src="/q/upload/image/20231224/1703423498724166.jpg" width=460 height=300 alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
@@ -120,7 +102,7 @@
         <strong>Embroidery flower bud lace flower applique<sup class="badge">$:13.99</sup> Read More </strong>
 		
       </a>
-      <a class="big-x3 flex flex-column" href="/q/sewing/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2018-04-12 10:23:37">
+      <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
               <img loading="lazy" src="/q/upload/image/20231224/1703425258911508.jpg" width=460 height=300 alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
@@ -129,16 +111,34 @@
         <strong>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace<sup class="badge">$:9.99</sup> Read More </strong>
 		
       </a>
+      <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big">
+              <img loading="lazy" src="/q/upload/image/20201016/1602835279805298.jpg" width=460 height=300 alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set<sup class="badge">$:12</sup> Read More </strong>
+		
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head embroidery sticker,2024-06-02 18:42:38">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big">
+              <img loading="lazy" src="/q/upload/image/20201016/1602834188365455.jpg" width=460 height=300 alt="Tiger head embroidery sticker" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong>Tiger head embroidery sticker<sup class="badge">$:12</sup> Read More </strong>
+		
+      </a>
     </div>
   </div>
 </div>
 <div class="layout grid-large isplit scrollto"> 
   <div class="grid documents">
-    <a class="big-x4" href="./q/order/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
+    <a class="big-x4" href="./q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
       <strong>Chinese embroidery with a long history has been an important···</strong>
       <p>Chinese embroidery with a long history has been an important part of··· <sup>2018-04-12</sup>Read More</p>
     </a>
-    <a class="big-x4" href="./q/order/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
+    <a class="big-x4" href="./q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
       <strong>Chinese embroidery has four major traditional styles: Su, Sh···</strong>
       <p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang··· <sup>2018-04-12</sup>Read More</p>
     </a>
@@ -148,7 +148,7 @@
     <h3></h3>
   <p align="center"> </p>
   <div class="grid documents">
-    <a class="big-x4" href="/q/video/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
+    <a class="big-x4" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
       <strong>Chinese traditional embroidery craft, arts and culture in a unique ancie···<sup>2018-04-12</sup>Read More</strong>
     </a>
   </div>
@@ -163,7 +163,7 @@
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p>2024 Zalalaa.Com Chinese Embroidery stickers  </p>  
+  <p>2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a>  </p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
