--- a/q/14.html
+++ b/q/14.html
@@ -51,7 +51,7 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="/en/a2.jpg" class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/image/20201016/1602835286258353.jpg" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.<sup> </sup></strong>
@@ -78,17 +78,13 @@
   <div class="grid isplit-full">
     <div class="x6 big-x2 big-move1 order0" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
     <div class="x6 big-x2 big-order2" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
-    <div class="x12 big-x6 big-order1 align-left" align="center"><strong>Email: 9050150@qq.com</strong><br /><br /><strong class="h4 weight">Address：No. 5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</strong><br />
+    <div class="x12 big-x6 big-order1 align-left" align="center"><strong>Email: 9050150@qq.com</strong><br />Email: sbqwg@outlook.com<br /><strong class="h4 weight">Address：No. 5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</strong><br />
       </div> 
   </div>
 </div>
-
-
-
-
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- 
-  <p>2024 Zalalaa.Com Chinese Embroidery stickers  </p>  
+  <p>2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a>  </p>  
 </div>
+<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
