--- a/q/abouts/index.html
+++ b/q/abouts/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>contacts-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>zalalaa-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
-<meta name="description" content="Email: 9050150@qq.comsbqwg@outlook.comQ Q: 9050150WeChat: qq9050150Address：NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China">
+<meta name="description" content="Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordina">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,21 +41,21 @@
 <br />
 
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h3 class="margin-bottom-mini weight" align="center">contacts</h3>
-  <p align="center">2018-04-11</p>
+  <h3 class="margin-bottom-mini weight" align="center">zalalaa</h3>
+  <p align="center">2012-12-06</p>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
       <a class="padding block text-white discovers-main" href="/q/upload/image/20231224/1703425271933476.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20231224/1703425271933476.jpg" alt="contacts" class="img-auto scale" /> </figure>
+           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20231224/1703425271933476.jpg" alt="zalalaa" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-search-bg text-main"></i></div>
         </div>
-        <strong class="weight-small">contacts</strong>
+        <strong class="weight-small">zalalaa</strong>
         <p class="size-small"></p>
       </a>
     </div>
     <div class="big-x8">
-      <p>Email: 9050150@qq.com</p><p>sbqwg@outlook.com</p><p>Q Q: 9050150</p><p><img src="/q/wx.webp" width="200" height="200"/></p><p>WeChat: qq9050150<br/></p><p>Address：NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China <br/></p><p><br/></p>
+      <p>Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;</p><p><br/></p><p>&nbsp;Fashion and high quality lace make customers extraordinary.</p><p><br/></p><p>Email:sbqwg@outlook.com</p>
     </div>
   </div>
    <div class="grid big-grid-middle large-grid-large isplit-content">
