--- a/q/article/index.html
+++ b/q/article/index.html
@@ -49,7 +49,7 @@
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/order/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
+      <a class="big-x3 flex flex-column" href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201015/1602731478255468.jpg"  alt="Chinese embroidery with a lo···" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
@@ -57,7 +57,7 @@
         <strong class="weight-small">Chinese embroidery with a lo···<sup>+</sup></strong>
         <p class="flex-grow">Chinese embroidery with a long history has been an important part ···<time>2018-04-12</time></p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/order/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
+      <a class="big-x3 flex flex-column" href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20231224/1703425271933476.jpg"  alt="Chinese embroidery has four ···" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
@@ -71,10 +71,10 @@
 
 <div class="layout grid-large isplit scrollto">
   <div class="grid documents">
-    <a class="big-x4" href="/q/order/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
+    <a class="big-x4" href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
       <strong>Chinese embroidery with a long history has been an important part of the···<sup>2018-04-12</sup></strong>
     </a>
-    <a class="big-x4" href="/q/order/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
+    <a class="big-x4" href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
       <strong>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, an···<sup>2018-04-12</sup></strong>
     </a>
   </div>
@@ -96,7 +96,7 @@
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p>2024 Zalalaa.Com Chinese Embroidery stickers  </p>  
+  <p>2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a>  </p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
