--- a/q/sewing/index.html
+++ b/q/sewing/index.html
@@ -40,22 +40,30 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">3</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">6</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Sewing Products</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/sewing/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed S,2021-11-18 16:47:47">
+      <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201015/1602733139966686.jpg"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed S" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201015/1602733139966686.jpg"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Colorful Embroidered Lace ···<sup class="badge">$:19.99</sup></strong>
+        <strong class="weight-small">Colorful Embroidered Lace ···<sup class="badge">$:12.99</sup></strong>
         <p class="size-small flex-grow">It will make your clothes look beautiful and unique, if you ··· <br />Read More</p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/sewing/13.html" title="Embroidery flower bud lace flower applique,2018-04-12 10:24:52">
+      <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201015/1602746517551568.jpg"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">Skull cloth patch<sup class="badge">$:12</sup></strong>
+        <p class="size-small flex-grow">Your clothes can be so gorgeous  <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/image/20231224/1703423498724166.jpg"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
@@ -63,13 +71,29 @@
         <strong class="weight-small">Embroidery flower bud lace···<sup class="badge">$:13.99</sup></strong>
         <p class="size-small flex-grow">Embroidery flower bud lace flower applique size: 30cm * 25cm··· <br />Read More</p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/sewing/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2018-04-12 10:23:37">
+      <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/image/20231224/1703425258911508.jpg"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">Red, white and black car b···<sup class="badge">$:9.99</sup></strong>
         <p class="size-small flex-grow">Red, white and black car bone flower wedding headpiece lace ··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201016/1602835279805298.jpg"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">Clothing accessories, embr···<sup class="badge">$:12</sup></strong>
+        <p class="size-small flex-grow">Clothing accessories, embroidery, lace cloth, computer embro··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head embroidery sticker,2024-06-02 18:42:38">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201016/1602834188365455.jpg"  alt="Tiger head embroidery sticker" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">Tiger head embroidery stic···<sup class="badge">$:12</sup></strong>
+        <p class="size-small flex-grow">Tiger head embroidery sticker  <br />Read More</p>
       </a>
     </div>
   </div>
@@ -90,7 +114,7 @@
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p>2024 Zalalaa.Com Chinese Embroidery stickers  </p>  
+  <p>2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a>  </p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
