--- a/q/default/html/productlist.html
+++ b/q/default/html/productlist.html
@@ -30,7 +30,7 @@
           <figure class="figure figure-above radius-big"><img src="[list:ico]"  alt="[list:title]" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">[list:title len=26]<sup class="badge">$:[list:ext_price]</sup></strong>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:[list:ext_price]</strong>
         <p class="size-small flex-grow">[list:content drophtml=1 dropblank=1 len=60] <br />Read More</p>
       </a>{/pboot:list}
     </div>
