--- a/q/default/html/foot.html
+++ b/q/default/html/foot.html
@@ -1,14 +1,15 @@
 <div class="layout grid-large isplit-full scrollto">
   <h4>  </h4>
   <div class="grid isplit-full">
-    <div class="x6 big-x2 big-move1 order0" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="{pboot:companyweixin}" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
-    <div class="x6 big-x2 big-order2" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="{label:wxs}" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
-    <div class="x12 big-x6 big-order1 align-left" align="center"><strong>Email: 9050150@qq.com</strong><br />Email: sbqwg@outlook.com<br /><strong class="h4 weight">Address：{pboot:companyaddress}</strong><br />
+    <div class="x6 big-x2 big-move1 order0" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="{pboot:companyweixin}" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br /><p class="size-small text-gray flex-grow">Scan WeChat to add friends and purchase</p></div>
+    
+    <div class="x8 big-x6 big-order1 align-left" align="center">
+	<p class="size-small text-gray flex-grow">Email: 9050150@qq.com<br />Email: sbqwg@outlook.com<br />Address：{pboot:companyaddress}</p>
       </div> 
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p>{pboot:sitecopyright}  {pboot:sitestatistical}</p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a></p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
