--- a/q/gbook/index.html
+++ b/q/gbook/index.html
@@ -7,9 +7,9 @@
 <meta name="renderer" content="webkit">
 <title>在线留言-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
-<meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. www.Zalalaa.Com">
+<meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-06-11">
+<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-06-14">
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -68,14 +68,15 @@
 <div class="layout grid-large isplit-full scrollto">
   <h4>  </h4>
   <div class="grid isplit-full">
-    <div class="x6 big-x2 big-move1 order0" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
-    <div class="x6 big-x2 big-order2" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
-    <div class="x12 big-x6 big-order1 align-left" align="center"><strong>Email: 9050150@qq.com</strong><br />Email: sbqwg@outlook.com<br /><strong class="h4 weight">Address：No. 5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</strong><br />
+    <div class="x6 big-x2 big-move1 order0" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br /><p class="size-small text-gray flex-grow">Scan WeChat to add friends and purchase</p></div>
+    
+    <div class="x8 big-x6 big-order1 align-left" align="center">
+	<p class="size-small text-gray flex-grow">Email: 9050150@qq.com<br />Email: sbqwg@outlook.com<br />Address：No. 5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</p>
       </div> 
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p>2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a>  </p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a></p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
