--- a/q/sewing/index.html
+++ b/q/sewing/index.html
@@ -7,7 +7,7 @@
 <meta name="renderer" content="webkit">
 <title>Sewing Products-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
-<meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. www.Zalalaa.Com">
+<meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
@@ -52,7 +52,7 @@
           <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201015/1602733139966686.jpg"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Colorful Embroidered Lace ···<sup class="badge">$:12.99</sup></strong>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
         <p class="size-small flex-grow">It will make your clothes look beautiful and unique, if you ··· <br />Read More</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
@@ -60,7 +60,7 @@
           <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201015/1602746517551568.jpg"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Skull cloth patch<sup class="badge">$:12</sup></strong>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
         <p class="size-small flex-grow">Your clothes can be so gorgeous  <br />Read More</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
@@ -68,7 +68,7 @@
           <figure class="figure figure-above radius-big"><img src="/q/upload/image/20231224/1703423498724166.jpg"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Embroidery flower bud lace···<sup class="badge">$:13.99</sup></strong>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:13.99</strong>
         <p class="size-small flex-grow">Embroidery flower bud lace flower applique size: 30cm * 25cm··· <br />Read More</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
@@ -76,7 +76,7 @@
           <figure class="figure figure-above radius-big"><img src="/q/upload/image/20231224/1703425258911508.jpg"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Red, white and black car b···<sup class="badge">$:9.99</sup></strong>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
         <p class="size-small flex-grow">Red, white and black car bone flower wedding headpiece lace ··· <br />Read More</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
@@ -84,15 +84,15 @@
           <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201016/1602835279805298.jpg"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Clothing accessories, embr···<sup class="badge">$:12</sup></strong>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
         <p class="size-small flex-grow">Clothing accessories, embroidery, lace cloth, computer embro··· <br />Read More</p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head embroidery sticker,2024-06-02 18:42:38">
+      <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201016/1602834188365455.jpg"  alt="Tiger head embroidery sticker" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201016/1602834188365455.jpg"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small">Tiger head embroidery stic···<sup class="badge">$:12</sup></strong>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
         <p class="size-small flex-grow">Tiger head embroidery sticker  <br />Read More</p>
       </a>
     </div>
@@ -107,14 +107,15 @@
 <div class="layout grid-large isplit-full scrollto">
   <h4>  </h4>
   <div class="grid isplit-full">
-    <div class="x6 big-x2 big-move1 order0" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
-    <div class="x6 big-x2 big-order2" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br />Scan WeChat to add friends and purchase</div>
-    <div class="x12 big-x6 big-order1 align-left" align="center"><strong>Email: 9050150@qq.com</strong><br />Email: sbqwg@outlook.com<br /><strong class="h4 weight">Address：No. 5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</strong><br />
+    <div class="x6 big-x2 big-move1 order0" align="center"> <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/wx.webp" alt="Scan WeChat to add friends and purchase" width="200" class="margin-top radius" /></figure><br /><p class="size-small text-gray flex-grow">Scan WeChat to add friends and purchase</p></div>
+    
+    <div class="x8 big-x6 big-order1 align-left" align="center">
+	<p class="size-small text-gray flex-grow">Email: 9050150@qq.com<br />Email: sbqwg@outlook.com<br />Address：No. 5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</p>
       </div> 
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p>2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a>  </p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a></p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
