git add --renormalize

--- a/q/18.html
+++ b/q/18.html
@@ -102,8 +102,8 @@ Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will co
       </a>
     </div>
   </div>
-<p>上一个：<a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
-<p>下一个：<a href="/q/20.html">Skull cloth patch</a></p>
+<p>上一个：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>下一个：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
@@ -158,7 +158,7 @@ Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will co
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a></p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
