--- a/q/11.html
+++ b/q/11.html
@@ -89,8 +89,8 @@
       </a>
     </div>
   </div>
-<p>上一个：<a href="javascript:;"> </a></p>
-<p>下一个：<a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
+<p>上一个：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>下一个：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
@@ -145,7 +145,7 @@
   </div>
 </div>
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin. <a href="/sitemap.txt" target="_blank">sitemap.txt</a></p>  
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
 </div>
 <script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
