git add --renormalize

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201015/1602746517551568.jpg" alt="Skull cloth patch,2024-06-10 21:33:26" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240615/1718438129101942.webp" alt="Skull cloth patch,2024-06-10 21:33:26" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
@@ -95,7 +95,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20231224/1703423498724166.jpg" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240615/1718438305820621.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:13.99</strong>
@@ -103,7 +103,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20231224/1703425258911508.jpg" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240615/1718438351867877.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
@@ -111,7 +111,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835279805298.jpg" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240615/1718437762770255.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
@@ -119,7 +119,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602834188365455.jpg" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240615/1718438037663625.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
